--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<html>
 <body>
-    <script src="app.js"></script>
+<h1>The Element Object</h1>
+<h2>The parentNode Property</h2>
+
+<ul>
+  <li id="myLI">Coffee</li>
+  <li>Tea</li>
+</ul>
+
+<p>The node name of the parent node of "myLI" is:</p>
+<p id="demo"></p>
+
+<script src="app.js"></script>
 </body>
 </html>
